# food-risk-detection-ml

./: .gitignore  Dockerfile  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
.github/workflows/: ci-cd.yml
backend/: metrics.json  pytest.ini  requirements.txt  schema.yaml  view_mlflow_experiments.py
backend/research/: 1_data_ingestion.ipynb  2_data_validation.ipynb  3_data_transformaton.ipynb
backend/src/datascience/: __init__.py
backend/src/datascience/components/: data_validation.py  model_trainer.py
backend/src/datascience/pipeline/: model_evaluation_pipeline.py  model_trainer_pipeline.py
backend/templates/: index.html  results.html
backend/tests/: test_app.py
config/: config.yaml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: .App..swp  App.css  App.js  App.js~
frontend/src/pages/: AnalysisForm.jsx  ErrorPage.jsx  HomePage.jsx  HomePage.jsx~  LandingPage.jsx  NavigationBar.jsx  RecentAnalysisList.jsx  ResultsPage.jsx
research/: 4_model_trainer.ipynb  5_model_evaluation.ipynb  research.ipynb
src/datascience/components/: data_ingestion.py  data_transformation.py  model_evaluation.py
src/datascience/config/: configuration.py
src/datascience/entity/: config_entity.py
src/datascience/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  prediction_pipeline.py
src/datascience/utils/: common.py
templates/: error.html  index.html
